<resources>
    <string name="app_name">Whatsapp_app</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no">no</string>
    <string name="groups">Groups</string>
    <string name="contact">Contact</string>
    <string name="chats">Chats</string>
    <string name="email">Email...</string>
    <string name="password">Password...</string>
    <string name="register">Register</string>
    <string name="already_have_account">already have account</string>
    <string name="j">no</string>
    <string name="forget_password">Forget Password</string>
    <string name="login">Login</string>
    <string name="need_new_account">Need new account</string>
    <string name="or_login_using_your">Or login using your</string>
    <string name="phone">Phone</string>
    <string name="find_friends">Find friends</string>
    <string name="logout">Logout</string>
    <string name="setting">Setting</string>
    <string name="find_friend">Find Friend</string>
    <string name="create_group">Create Group</string>
    <string name="request">Request</string>
    <string name="not">no</string>
    <string name="user_name_profile">user name</string>
    <string name="states_profile">hey I\'m using whatsapp</string>
    <string name="send_message_botton">Send message</string>
    <string name="cancel_chat_request_button">Cancel Chat Request</string>
    <string name="message_hint_text">Message</string>
    <string name="send_message_button">send message button</string>
    <string name="chatbutton">groupchatbutton</string>
</resources>