<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MainActivity">


    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:theme="@style/Theme.Whatsapp_app"

        >

        <include
            android:id="@+id/main_page_toolbar"
            layout="@layout/app_bar_layout">

        </include>

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/main_tabs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/teal_700"
            android:contentDescription="@string/no"
            app:tabIndicatorColor="@color/white"
            app:tabSelectedTextColor="@color/white">


            <com.google.android.material.tabs.TabItem
                android:text="@string/chats"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"/>

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/groups" />

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/contact" />
            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/request" />
        </com.google.android.material.tabs.TabLayout>

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/main_tabs_pager"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </androidx.viewpager2.widget.ViewPager2>

    </com.google.android.material.appbar.AppBarLayout>


</LinearLayout>