<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/profile_activity"
    tools:context=".ProfileActivity">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/visit_profile_image"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="110dp"/>


    <TextView
        android:id="@+id/visit_profile_name3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/user_name_profile"
        android:layout_below="@+id/visit_profile_image"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="5dp"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textStyle="bold"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/visit_profile_status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/states_profile"
        android:layout_below="@+id/visit_profile_name3"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="25dp"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textStyle="bold"
        android:textSize="25sp"/>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/send_massage_request_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/visit_profile_status"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="65dp"
        android:layout_marginRight="65dp"
        android:textColor="@color/cardview_light_background"
        android:background="@drawable/button"
        android:textStyle="bold"
        android:textSize="20sp"
        android:text="@string/send_message_botton"
        android:textAllCaps="false"
        tools:ignore="VisualLintButtonSize" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/decline_massage_request_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/send_massage_request_button"
        android:layout_marginTop="6dp"
        android:layout_marginLeft="65dp"
        android:layout_marginRight="65dp"
        android:textColor="@color/cardview_light_background"
        android:background="@drawable/button"
        android:textStyle="bold"
        android:textSize="20sp"
        android:text="@string/cancel_chat_request_button"
        android:textAllCaps="false"
        android:visibility="invisible"
        tools:ignore="VisualLintButtonSize" />



</RelativeLayout>